[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/sprites/Tree.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tree.gd" type="Script" id=2]
[ext_resource path="res://Assets/sprites/trunk_mid.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111.963, 207.898 )

[sub_resource type="CircleShape2D" id=2]
radius = 52.7768

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Tree:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Tree:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[node name="Tree" type="Node2D"]
script = ExtResource( 2 )

[node name="Tree" type="Sprite" parent="."]
position = Vector2( 0, -15.8086 )
scale = Vector2( 0.8, 0.729101 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -350, -900 )

[node name="Dead_Tree" type="Sprite" parent="Tree"]
position = Vector2( 10.4937, -59.3 )
scale = Vector2( 0.998589, 1.31758 )
texture = ExtResource( 3 )

[node name="High_Trunk" type="Area2D" parent="Tree" groups=[
"High_Trunk",
]]
position = Vector2( 0, 21.6823 )
scale = Vector2( 1.25, 1.37155 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree/High_Trunk"]
position = Vector2( 8.69663, -451.332 )
shape = SubResource( 1 )

[node name="Low_Trunk" type="Area2D" parent="Tree" groups=[
"Low_Trunk",
]]
position = Vector2( 0, 21.6823 )
scale = Vector2( 1.25, 1.37155 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree/Low_Trunk"]
position = Vector2( 4.1918, -112.028 )
shape = SubResource( 2 )

[node name="Tree_Left" type="AnimationPlayer" parent="."]
anims/punch = SubResource( 3 )

[node name="Tree_Right" type="AnimationPlayer" parent="."]
anims/punch = SubResource( 4 )
